--- a/localisation/japanese/countries_l_japanese.yml
+++ b/localisation/japanese/countries_l_japanese.yml
@@ -914,8 +914,8 @@
  JAP_fascism_DEF: "大日本帝国"
  JAP_democratic: "日本国"
  JAP_democratic_DEF: "日本国"
- JAP_neutrality: "幕政日本"
- JAP_neutrality_DEF: "幕政日本"
+ JAP_neutrality: "大日本帝国"
+ JAP_neutrality_DEF: "大日本帝国"
  JAP_communism: "日本人民共和国"
  JAP_communism_DEF: "日本人民共和国"
  JAP_fascism_ADJ: "日本"
@@ -1074,7 +1074,7 @@
  SAF_democratic_ADJ: "南アフリカ"
  SAF_neutrality_ADJ: "南アフリカ"
  SAF_communism_ADJ: "南アフリカ"
- SAF: "南アフリカ"
+ SAF: ""
  SAF_DEF: "南アフリカ"
  SAF_ADJ: "南アフリカ"
  SAU_fascism: "アラブ帝国"
@@ -1472,8 +1472,8 @@
  KOR_democratic_ADJ: "韓国"
  KOR_neutrality_ADJ: "朝鮮"
  KOR_communism_ADJ: "朝鮮"
- KOR_JAP_fascism_subject: "朝鮮総督府"
- KOR_JAP_fascism_subject_DEF: "朝鮮総督府"
+ KOR_JAP_neutrality_subject: "朝鮮総督府"
+ KOR_JAP_neutrality_subject_DEF: "朝鮮総督府"
  KOR: "朝鮮"
  KOR_DEF: "朝鮮"
  KOR_ADJ: "朝鮮"
@@ -1935,21 +1935,21 @@
  BOT: "ボツワナ"
  BOT_DEF: "ボツワナ"
  BOT_ADJ: "ボツワナ"
- MAN_fascism: "清国"
- MAN_fascism_DEF: "清国"
+ MAN_fascism: "奉天政府"
+ MAN_fascism_DEF: "奉天政府"
  MAN_democratic: "満州共和国"
  MAN_democratic_DEF: "満州共和国"
- MAN_neutrality: "清国"
- MAN_neutrality_DEF: "清国"
+ MAN_neutrality: "奉天政府"
+ MAN_neutrality_DEF: "奉天政府"
  MAN_communism: "満州自由民主主義人民共和国"
  MAN_communism_DEF: "満州自由民主主義人民共和国"
- MAN_fascism_ADJ: "満州"
- MAN_democratic_ADJ: "満州"
- MAN_neutrality_ADJ: "満州"
- MAN_communism_ADJ: "満州"
+ MAN_fascism_ADJ: "奉天政府"
+ MAN_democratic_ADJ: "奉天政府"
+ MAN_neutrality_ADJ: "奉天政府"
+ MAN_communism_ADJ: "奉天政府"
  MAN: "中国"
  MAN_DEF: "中国"
- MAN_ADJ: "満州"
+ MAN_ADJ: "奉天政府"
  BAH_fascism: "バハマ単一国"
  BAH_fascism_DEF: "バハマ単一国"
  BAH_democratic: "バハマ国"
@@ -2415,6 +2415,9 @@
  SUD: "スーダン"
  SUD_DEF: "スーダン"
  SUD_ADJ: "スーダン"
+ SUD_ENG_neutrality_subject: "英埃領スーダン"
+ SUD_ENG_neutrality_subject_DEF: "英埃領スーダン"
+ SUD_ENG_neutrality_subject_ADJ: "英埃領スーダン"
  ERI_fascism: "統一エリトリア"
  ERI_fascism_DEF: "統一エリトリア"
  ERI_democratic: "エリトリア"
@@ -6295,3 +6298,33 @@
  GZH: "貴州"
  GZH_ADJ: "貴州"
  GZH_DEF: "貴州"
+ HNA_fascism: "湖南"
+ HNA_fascism_DEF: "湖南"
+ HNA_democratic: "湖南"
+ HNA_democratic_ADJ: "湖南"
+ HNA_democratic_DEF: "湖南"
+ HNA_democratic_ADJ: "湖南"
+ HNA_democratic_DEF: "湖南"
+ HNA_neutrality: "湖南"
+ HNA_neutrality_ADJ: "湖南"
+ HNA_neutrality_DEF: "湖南"
+ HNA_communism: "湖南"
+ HNA_communism_ADJ: "湖南"
+ HNA_communism_DEF: "湖南"
+ HNA: "湖南"
+ HNA_ADJ: "湖南"
+ HNA_DEF: "湖南"
+ FJN_fascism: "福建"
+ FJN_fascism_DEF: "福建"
+ FJN_democratic: "福建"
+ FJN_democratic_ADJ: "福建"
+ FJN_democratic_DEF: "福建"
+ FJN_democratic_ADJ: "福建"
+ FJN_democratic_DEF: "福建"
+ FJN_neutrality_ADJ: "福建"
+ FJN_neutrality_DEF: "福建"
+ FJN_communism: "福建"
+ FJN_communism_DEF: "福建"
+ FJN: "福建"
+ FJN_ADJ: "福建"
+ FJN_DEF: "福建"
