--- a/localisation/japanese/factions_l_japanese.yml
+++ b/localisation/japanese/factions_l_japanese.yml
@@ -106,3 +106,4 @@
  DEN_nordic_cooperation_alliance: "北欧企業同盟"
  DEN_northern_national_front: "北方国民戦線"
  DEN_northern_security_pact: "北方安全保障条約"
+Republic_of_China: "中華民国"
