add SRI Left events

--- a/localisation/japanese/countries_l_japanese.yml
+++ b/localisation/japanese/countries_l_japanese.yml
@@ -399,12 +399,12 @@
  SRI_neutrality_DEF: "イタリア王国"
  SRI_communism: "イタリア社会主義共和国"
  SRI_communism_DEF: "イタリア社会主義共和国"
- SRI_socialist: "イタリア社会主義共和国"
- SRI_socialist_DEF: "イタリア社会主義共和国"
+ SRI_socialism: "イタリア社会主義共和国"
+ SRI_socialism_DEF: "イタリア社会主義共和国"
  SRI_socialdemocratic: "イタリア共和国"
  SRI_socialdemocratic_DEF: "イタリア共和国"
- SRI_conservatism: "イタリア共和国"
- SRI_conservatism_DEF: "イタリア共和国"
+ SRI_conservatism: "イタリア国"
+ SRI_conservatism_DEF: "イタリア国"
  SRI_Lcoalition: "イタリア社会主義共和国"
  SRI_Lcoalition_DEF: "イタリア社会主義共和国"
  SRI_fascism_ADJ: "イタリア"
@@ -4099,8 +4099,8 @@
  QEM_democratic_ADJ: "クワラ"
  QEM_communism_ADJ: "ケマント"
  QEM_neutrality_ADJ: "ベゲムデル"
- SRI: "イタリア社会共和国"
- SRI_DEF: "イタリア社会共和国"
+ SRI: "イタリア社会主義共和国"
+ SRI_DEF: "イタリア社会主義共和国"
  SRI_ADJ: "イタリア"
  RDS: "南の王国"
  RDS_DEF: "南の王国"
@@ -6256,6 +6256,9 @@
  DNS_neutrality: "沿ドニエストル"
  DNS_neutrality_ADJ: "沿ドニエストル"
  DNS_neutrality_DEF: "沿ドニエストル"
+ DNS_socialism: "沿ドニエストル社会主義共和国"
+ DNS_socialism_ADJ: "沿ドニエストル"
+ DNS_socialism_DEF: "沿ドニエストル社会主義共和国"
  DNS_communism: "沿ドニエストルソビエト社会主義共和国"
  DNS_communism_ADJ: "沿ドニエストル"
  DNS_communism_DEF: "沿ドニエストルソビエト社会主義共和国"
