--- a/localisation/TR_focus/japanese/TR_RUS_focus_l_japanese.yml
+++ b/localisation/TR_focus/japanese/TR_RUS_focus_l_japanese.yml
@@ -13,3 +13,7 @@
  RUS_search_of_siberia_desc:"シベリア付近の地質学者たちの熱心な研究によると、この辺りには多くの資源が埋まっている可能性があるらしい。かつてより話され、馬鹿げた話だと拒否されてきた大規模調査を、今こそ政府の総力を挙げて行うべきだろう。"
  RUS_census:"戸籍改革"
  RUS_census_desc:"遊牧民や徴兵逃れなどは、我が国のずさんな戸籍制度によるものである。シベリア測量で得た大量の資源を利用して、遊牧民に対する決定的な解決策を講じるべきだ。"
+ RUS_compulsory_education:"義務教育制度"
+ RUS_compulsory_education_desc:"国内には、多くの才能を持った子供たちがいる。彼らを国の未来のために教育し、彼らのための研究所をシベリア測量で得た資源を利用して整備することで、我が国の絶望的な技術開発は改善するだろう。"
+ RUS_industrial_rubber:"工業ゴム生産"
+ RUS_industrial_rubber_desc:"国内の大都市にある使われなくなった土地で、半国営の大規模なゴム合成生産工場を建設する。我々に足りていない資源であるゴムを優先的に獲得することで、共産主義者やその他の脅威からの資源的な脆弱性を減らす。"
