--- a/localisation/TR_focus/japanese/TR_RUS_focus_l_japanese.yml
+++ b/localisation/TR_focus/japanese/TR_RUS_focus_l_japanese.yml
@@ -17,3 +17,5 @@
  RUS_compulsory_education_desc:"国内には、多くの才能を持った子供たちがいる。彼らを国の未来のために教育し、彼らのための研究所をシベリア測量で得た資源を利用して整備することで、我が国の絶望的な技術開発は改善するだろう。"
  RUS_industrial_rubber:"工業ゴム生産"
  RUS_industrial_rubber_desc:"国内の大都市にある使われなくなった土地で、半国営の大規模なゴム合成生産工場を建設する。我々に足りていない資源であるゴムを優先的に獲得することで、共産主義者やその他の脅威からの資源的な脆弱性を減らす。"
+ RUS_invade_PER:"カスピ海の護り"
+ RUS_invade_PER_desc:"カスピ海の南側はイランが領有しており、我々のカスピ海における活動を阻害する要因になっている。大戦争の後にあの地から手を引いたのは間違えだったのだろう。我々はこの地を素早く奪還しなければならない。"
