--- a/localisation/TR_ideas/japanese/TR_RUS_ideas_l_japanese.yml
+++ b/localisation/TR_ideas/japanese/TR_RUS_ideas_l_japanese.yml
@@ -27,3 +27,5 @@
  RUS_tsar_infantry_desc:"宮廷内にも、新皇帝のことを良く思わない保守層がいる。それまでの期間、皇帝の身の安全をより確実に守るため、皇帝は宮廷親衛隊の創設を指示した。彼らは国が安定するまでの間、彼の身の回りでより高度な護衛を行う。"
  RUS_search_of_siberia_tired:"シベリア測量の予算"
  RUS_search_of_siberia_tired_desc:"シベリア測量という国家規模の計画には、我が国の少ない先端機器を総動員している。この為、他の政府が使うはずの予算はすべて凍結され、国家による産業の最適化はもはや停止している。"
+ RUS_war_against_PER:"反対されたイラン戦争"
+ RUS_war_against_PER_desc:"イランに対する戦争は、国際社会において我々を非難する十分すぎる理由になっている。前線で起こる様々な国からの妨害行為や、かつての盟友イギリスからの公的な非難声明は、我が国の新たな戦争の幕開けにはあまりにも不適だ。"
