ロシアバフツリー＋軍事産業ツリー

--- a/localisation/TR_events/japanese/TR_RUS_events_l_japanese.yml
+++ b/localisation/TR_events/japanese/TR_RUS_events_l_japanese.yml
@@ -13,6 +13,9 @@
  TR_Russia.5.t: "シベリアの資源"
  TR_Russia.5.d: "地質学者たちの研究によって予想されたシベリアの資源は、想像以上に大量に埋蔵していることが発覚した。この計画に投入された国家予算と比較しても、長期的な利益となる国内で足りていない資源について、多くの新たな発見があった。すでに政府は、極東に対する調査計画を進めている。"
  TR_Russia.5.a: "こんなにも沢山か！"
+ TR_Russia.6.t: "テヘラン講和会議"
+ TR_Russia.6.d: "首都テヘランを失ったイランは、我々に和平と休戦を申し出てきた。既にイラン北部は我々の工作により複数の反イラン勢力を活発化させている。我々箱の会議で何を要求すべきだろう？"
+ TR_Russia.6.a: "イラン北部を「解放」しよう。"
 
  TR_Russia_news.1.t: "ロシア皇帝の暗殺"
  TR_Russia_news.1.d: "一月中頃、ロシアの冬将軍はすでに大地を覆い、吹雪の中モスクワに到着した皇帝アレクセイを一発の銃弾が襲った。長らく政府によって抑圧されてきたボリシェヴィキは、入念なテロルの計画を実行に移した。皇帝アレクセイの持病、血友病の影響もあり、その日のうちに皇帝は急いで送り込まれた病院で医師の治療もやむなく息を引き取った。ペトログラードはこの知らせに動揺している。不幸中の幸いは、帝室一同が集まっていた宮殿に仕掛けられた爆弾が近衛兵により間一髪で解除されたことであろう。ただ、もはやロシア帝国にかつての秩序は存在せず、あるのは反動的な宮廷とそれに反抗的な一部の政府、そして陰で暗躍する共産主義者だけだ。"
