--- a/localisation/TR_ideas/japanese/TR_RUS_ideas_l_japanese.yml
+++ b/localisation/TR_ideas/japanese/TR_RUS_ideas_l_japanese.yml
@@ -29,3 +29,24 @@
  RUS_search_of_siberia_tired_desc:"シベリア測量という国家規模の計画には、我が国の少ない先端機器を総動員している。この為、他の政府が使うはずの予算はすべて凍結され、国家による産業の最適化はもはや停止している。"
  RUS_war_against_PER:"反対されたイラン戦争"
  RUS_war_against_PER_desc:"イランに対する戦争は、国際社会において我々を非難する十分すぎる理由になっている。前線で起こる様々な国からの妨害行為や、かつての盟友イギリスからの公的な非難声明は、我が国の新たな戦争の幕開けにはあまりにも不適だ。"
+
+ RUS_idea_civillian_government:"文民の政府"
+ RUS_idea_civillian_government_desc:"文民を中心に編成された帝国政府は、常に民間産業への投資を行い、国の産業化はより進展するだろう。"
+ RUS_idea_military_government:"軍人の政府"
+ RUS_idea_military_government_desc:"軍人が主導権を握る帝国政府では、国の安全保障のために様々な資源を利用し、強国の地位を維持するための努力が行われる。"
+ RUS_idea_civillian_government_1:"文民の政府"
+ RUS_idea_civillian_government_1_desc:"文民を中心に編成された帝国政府は、常に民間産業への投資を行い、国の産業化はより進展するだろう。"
+ RUS_idea_military_government_1:"軍人の政府"
+ RUS_idea_military_government_1_desc:"軍人が主導権を握る帝国政府では、国の安全保障のために様々な資源を利用し、強国の地位を維持するための努力が行われる。"
+ RUS_idea_civillian_government_2:"文民の政府"
+ RUS_idea_civillian_government_2_desc:"文民を中心に編成された帝国政府は、常に民間産業への投資を行い、国の産業化はより進展するだろう。"
+ RUS_idea_military_government_2:"軍人の政府"
+ RUS_idea_military_government_2_desc:"軍人が主導権を握る帝国政府では、国の安全保障のために様々な資源を利用し、強国の地位を維持するための努力が行われる。"
+ RUS_idea_civillian_government_3:"文民の政府"
+ RUS_idea_civillian_government_3_desc:"文民を中心に編成された帝国政府は、常に民間産業への投資を行い、国の産業化はより進展するだろう。"
+ RUS_idea_military_government_3:"軍人の政府"
+ RUS_idea_military_government_3_desc:"軍人が主導権を握る帝国政府では、国の安全保障のために様々な資源を利用し、強国の地位を維持するための努力が行われる。"
+ RUS_idea_civillian_government_1_1:"文民の政府"
+ RUS_idea_civillian_government_1_1_desc:"文民を中心に編成された帝国政府は、常に民間産業への投資を行い、国の産業化はより進展するだろう。"
+ RUS_idea_military_government_1_1:"軍人の政府"
+ RUS_idea_military_government_1_1_desc:"軍人が主導権を握る帝国政府では、国の安全保障のために様々な資源を利用し、強国の地位を維持するための努力が行われる。"
