--- a/localisation/TR_focus/japanese/TR_RUS_focus_l_japanese.yml
+++ b/localisation/TR_focus/japanese/TR_RUS_focus_l_japanese.yml
@@ -43,3 +43,30 @@
  RUS_military_government_2_desc:"新兵に対して行う訓練を全国で統一することで、土地による兵の質を均一化し、訓練の無駄を省くことができる。"
  RUS_military_government_3:"大規模宣伝"
  RUS_military_government_3_desc:"志願兵を募る大規模な宣伝活動を行い、全国から志ある若者たちを多く集めることで、大規模かつ士気の高い軍を編成する。"
+
+ RUS_infrastructure:"道路舗装事業"
+ RUS_infrastructure_desc:"我が国の多くの場所はコンクリートで舗装されていない古い道路であり、大きな車両は通行できない。産業効率化の為に、我々はこれを克服しなければならない。"
+ RUS_infrastructure_1:"帝立発電所の建設"
+ RUS_infrastructure_desc:"帝国の電気事情は劣悪だ。今もほとんどの世帯では蝋燭を使って夜を過ごしている。偉大なるツァーリは大規模な発電事業を自ら投資して行うと述べ、膨大な資金で電気の届かない地域に対し大規模な発電設備を建設した。"
+ RUS_agricultural_tructer:"自動農具の公共化"
+ RUS_agricultural_tructer_desc:"発達した自動農具を各地に存在する自治体に配給し、それを共同で使う自動農具法を帝国政府が可決した。農業の近代化は国の近代化であり、農具の生産の為に必要な工場をより多く建設せねばならない。"
+ RUS_tech_school:"帝国技術学院"
+ RUS_tech_school_desc:"帝国技術学院は、皇帝自らそのカリキュラムを技術者と会議し、全国から広く生徒を集める学院である。この地で学んだ若者は地元の発展の為に地元の自治体で働く。"
+ RUS_factory:"重工業化白書"
+ RUS_factory_desc:"重工業化白書は、国内の物資と建材の一部の範囲でどれだけの機能する工場を作成できるかという社会実験である。モスクワの社会学者が提案したこの実験によって、効率化された工場建設のための知見を得ることができた。"
+ RUS_scholarship:"国家奨学金"
+ RUS_scholarship_desc:"国家が優秀な生徒に対して奨学金を払うことで、富の有無に関わらず人材を最大限利用できるようになるだろう。"
+ RUS_develop_arkhangelsk:"アルハンゲリスクを開発"
+ RUS_develop_arkhangelsk_desc:"アルハンゲリスクは、首都ペトログラードからも遠くはなく、飽和した産業水準に達していない都市である。この都市を集中的に開発することで、戦いの際に首都機能移転の候補となるだろう。"
+ RUS_develop_khabarovsk:"ハバロフスクを開発"
+ RUS_develop_khabarovsk_desc:"我が国のシベリア方面の産業はウラジオストクに集中しているが、ウラジオストクは日本の脅威に晒されており、有事の際の産業移転のための基盤がシベリアには存在しない。若干内陸にあるハバロフスクこそ相応しい。"
+ RUS_development_arctic_zone:"北部ロシアの開発"
+ RUS_development_arctic_zone_desc:"首都より北方、北部ロシアの地域には多くの孤立した集落が存在する。それらを道路で接続し、産業基盤を国家が整えることで、ヨーロッパロシアのさらなる開発に成功するだろう。"
+ RUS_ukrine:"ウクライナ農村の開発"
+ RUS_ukrine_desc:"ウクライナは我が国の重要な穀倉地帯だ。これらの地域における孤立した集落は、農産物の流通において大きな障害となるため、適切なインフラを整備し、この地域の開発基盤を再構成する。"
+ RUS_wasteland_remake:"無人地帯への入植"
+ RUS_wasteland_remake_desc:"ロシア国内には多くの無人地帯がある。ここに測量関係の技術者を中心とした小さな集落を形成することによって、我が国の広大な土地を無駄なく活用できる。"
+ RUS_remake_MGI:"国家資産省の再編"
+ RUS_remake_MGI_desc:"国家資産省は我が国の産業改革によってもはやほとんど機能していない。内部で極秘に研究されていた技術と共に全てを公開し、新たな組織へ作り変えるようツァーリは指示した。"
+ RUS_remake_industrial_system:"ロシア経済圏"
+ RUS_remake_industrial_system_desc:"帝国政府の懸命な努力と、開発に協力した多くの労働者、そして改革の先導者たるツァーリの努力によって、ロシア国内の経済状況は非常に近代的なものへと変化した。ペトログラードの市内ではビジネスマンたちがニューヨークのように行き交い、木造の家で蠟燭を頼りに本を読んでいた貧しい子供はモスクワの技術学校で学んでいる。我々の経済の近代化は途上であるが、あと少しの努力で完全な近代経済国家となり、世界最高水準の生産力を得るだろう。"
