--- a/localisation/TR_ideas/japanese/TR_RUS_ideas_l_japanese.yml
+++ b/localisation/TR_ideas/japanese/TR_RUS_ideas_l_japanese.yml
@@ -17,8 +17,12 @@
  RUS_agricultural_economy_desc: "我が国の長く続いた農奴制と実質的に今も続く農家の貧困、国家の産業の秩序は近代国家には適切ではなく、その結果、絶望的なまでに非効率な経済体系が未だロシアには存在している。近代化の途上でこのような問題は一般的に解決されるが、これまでロシア帝国政府は農家に目を向けた政策を出していなかった。"
  RUS_agricultural_economy_1: "農業経済"
  RUS_agricultural_economy_1_desc: "我が国の長く続いた農奴制と実質的に今も続く農家の貧困、国家の産業の秩序は近代国家には適切ではなく、その結果、絶望的なまでに非効率な経済体系が未だロシアには存在している。近代化の途上でこのような問題は一般的に解決されるが、これまでロシア帝国政府は農家に目を向けた政策を出していなかった。"
+ RUS_agricultural_economy_2: "農業経済"
+ RUS_agricultural_economy_2_desc: "我が国の長く続いた農奴制と実質的に今も続く農家の貧困、国家の産業の秩序は近代国家には適切ではなく、その結果、絶望的なまでに非効率な経済体系が未だロシアには存在している。近代化の途上でこのような問題は一般的に解決されるが、これまでロシア帝国政府は農家に目を向けた政策を出していなかった。"
  RUS_MGI: "ロシア国家資産省"
  RUS_MGI_desc: "国家資産省は、農奴解放後の土地の分配を主に行っていたが、大戦争後は資源の管理を中心に行っている。この組織は公然と資源を貯蔵し、他の国家権力から守られたところで現在も戦争のための物資を貯蓄している。"
+ RUS_MGI_1: "ロシア国家資産省"
+ RUS_MGI_1_desc: "国家資産省は、農奴解放後の土地の分配を主に行っていたが、大戦争後は資源の管理を中心に行っている。この組織は公然と資源を貯蔵し、他の国家権力から守られたところで現在も戦争のための物資を貯蓄している。"
  RUS_low_research: "遅滞した技術革新"
  RUS_low_research_desc: "大戦争での勝利から、ロシアの技術研究は停滞している。このままでは近代化もままならない、前時代的国家となってしまうだろう。"
  RUS_released_political_prisoner: "政治犯の釈放"
@@ -50,3 +54,5 @@
  RUS_idea_civillian_government_1_1_desc:"文民を中心に編成された帝国政府は、常に民間産業への投資を行い、国の産業化はより進展するだろう。"
  RUS_idea_military_government_1_1:"軍人の政府"
  RUS_idea_military_government_1_1_desc:"軍人が主導権を握る帝国政府では、国の安全保障のために様々な資源を利用し、強国の地位を維持するための努力が行われる。"
+ RUS_tech_scholarship:"国家奨学金"
+ RUS_tech_scholarship_desc:"国家奨学金は、国費で優秀な学生に学習の機会を与える先進的制度である。"
