--- a/localisation/TR_ideas/japanese/TR_GER_ideas_l_japanese.yml
+++ b/localisation/TR_ideas/japanese/TR_GER_ideas_l_japanese.yml
@@ -1,3 +1,5 @@
 ﻿l_japanese:
  GER_successful_revolution: "成功した革命"
- GER_successful_revolution_desc: "ドイツ革命は共産主義者が権力を手にして終わりを迎えた。我々はこの成功を利用し、真の社会主義国家建設を目指して前進し続けるだろう。"
+ GER_successful_revolution_desc: "ドイツにおける革命の成功は国内外の共産主義者に大きな影響を与えた。我々はこの成功を利用し、真の社会主義国家建設を目指して前進し続けるだろう。"
+ GER_left_right_divide: "左右の分裂"
+ GER_totalitarian_oppression: "全体主義者の弾圧"
