--- a/localisation/TR_focus/japanese/TR_GER_focus_l_japanese.yml
+++ b/localisation/TR_focus/japanese/TR_GER_focus_l_japanese.yml
@@ -46,3 +46,10 @@
  GER_assist_small_medium_enterprises:0 "中小企業への援助"
  GER_agricultural_collectivization:0 "農業集団化"
  :0 ""
+ GER_rail_network_expansion:0 "鉄道網の拡大"
+ GER_focus_on_industry:0 "産業への注力"
+ GER_first_five_year_plan:0 "第一次五ヵ年計画"
+ GER_second_five_year_plan:0 "第二次五ヵ年計画"
+ GER_one_country_socialism:0 "一国社会主義"
+ GER_reclaiming_north_schleswig_desc:0 "GER_reclaiming_north_schleswig_desc"
+ GER_reclaiming_north_schleswig:0 "北シュレースヴィヒ奪還"
