SPQR! and SRI focuses

--- a/localisation/TR_cosmetics/japanese/TR_cosmetic_l_japanese.yml
+++ b/localisation/TR_cosmetics/japanese/TR_cosmetic_l_japanese.yml
@@ -8,4 +8,5 @@
  CRO_SLV_neutrality: "クロアート＝スロヴェーン連合王国"
  CRO_SLV_fascism: "クロアート＝スロヴェーン軍政府"
  SOM_UK_subject: "$OVERLORDADJ$保護領ソマリア"
+ URSR: "ローマ社会主義共和国連邦"
  PER_puppet_RUS: "ペルシャ保護領"
