change localise and add generic ideas

--- a/localisation/japanese/state_names_l_japanese.yml
+++ b/localisation/japanese/state_names_l_japanese.yml
@@ -796,7 +796,7 @@
  STATE_794:0 "アラゴン東部"
  STATE_795:0 "サンタレン"
  STATE_796:0 "北アンゴラ"
- STATE_797:0 "イスタンブール"
+ STATE_797:0 "コンスタンティノポリス"
  STATE_798:0 "アマスィヤ"
  STATE_799:0 "ハタイ"
  STATE_800:0 "ヴァン"
