--- a/localisation/japanese/victory_points_l_japanese.yml
+++ b/localisation/japanese/victory_points_l_japanese.yml
@@ -126,7 +126,7 @@
  VICTORY_POINTS_11746: "アダナ"
  VICTORY_POINTS_11747: "アンカラ"
  VICTORY_POINTS_12029: "アンタキヤ"
- VICTORY_POINTS_9833: "イスタンブール"
+ VICTORY_POINTS_9833: "コンスタンティノポリス"
  VICTORY_POINTS_9861: "コンヤ"
  VICTORY_POINTS_947: "ブルサ"
  VICTORY_POINTS_4112: "イズミル"
