チェコのNF外交、イベント以外完成

--- a/localisation/TR_focus/japanese/TR_CZE_focus_l_japanese.yml
+++ b/localisation/TR_focus/japanese/TR_CZE_focus_l_japanese.yml
@@ -9,7 +9,7 @@
  CZE_ind3: "サプライチェーンの拡大"
  CZE_weapon_ex1: "武器の輸出"
  CZE_weapon_ex2: "輸出産業の拡大"
- CZE_weapon_ex3: "戦車の委託生産"
+ CZE_weapon_ex3: "戦車の受注生産"
  CZE_tech: "産業研究所の設置"
 
  CZE_fortress: "国家要塞化計画"
