--- a/localisation/TR_ideas/japanese/TR_CZE_ideas_l_japanese.yml
+++ b/localisation/TR_ideas/japanese/TR_CZE_ideas_l_japanese.yml
@@ -1,3 +1,21 @@
 ﻿l_japanese:
+CZE_company_economy: "企業支配"
 TR_CZE_skoda_works: "シュコダの産業力"
+TR_CZE_skoda_works1: "シュコダの産業力"
+TR_CZE_skoda_works2: "シュコダの産業力"
+TR_CZE_skoda_works3: "シュコダの産業力"
+TR_CZE_skoda_anti: "企業の妨害"
+CZE_ex: "武器輸出"
+CZE_ex1: "輸出拡大"
+CZE_ex2: "武器産業"
 TR_CZE_demo_oppo: "民主主義者の反対"
+CZE_rus_investment: "ロシアの投資"
+CZE_dem_strong: "民主主義最後の盾"
+TR_CZE_inf: "数の戦争"
+TR_CZE_tank: "運動戦"
+TR_CZE_ind_tank: "生産力の確保"
+TR_CZE_ind_tank1: "戦車の増産"
+TR_CZE_Pskd: "勝利へ！"
+TR_CZE_Pskd1: "科学の栄光"
+TR_CZE_Pskd2: "チェコの栄光"
+TR_CZE_fortress: "国家要塞化計画"
