--- a/localisation/japanese/factions_l_japanese.yml
+++ b/localisation/japanese/factions_l_japanese.yml
@@ -17,6 +17,7 @@
  Allies: "連合国"
  Axis: "枢軸国"
  Comintern: "コミンテルン"
+ Balkan_revive_ally: "回復同盟"
  International: "第三インターナショナル"
  Slav_Entente: "スラブ協商"
  western_pacific_sphere: "西太平洋圏"
