Create Iraklion Decision

--- a/localisation/TR_events/japanese/TR_iraklion_events_l_japanese.yml
+++ b/localisation/TR_events/japanese/TR_iraklion_events_l_japanese.yml
@@ -1,4 +1,5 @@
 ﻿l_japanese:
+ TR_unlocked_iraklion_decisions_tt: "ディシジョン:§Yイラクリオン会議§!を解禁する！"
  TR_iraklion.1.t: "社会主義の台頭"
  TR_iraklion.2.t: "社会主義者のクーデター！"
  TR_iraklion.3.t: "ギリシャからの支援要請"
