add iraklion events

--- a/localisation/TR_events/japanese/TR_iraklion_events_l_japanese.yml
+++ b/localisation/TR_events/japanese/TR_iraklion_events_l_japanese.yml
@@ -10,6 +10,25 @@
  TR_iraklion.8.t: "ロシアによる調停"
  TR_iraklion.9.t: "イラクリオン会議の開催"
  TR_iraklion.10.t: "イギリスの介入"
+ TR_iraklion.11.t: "イラクリオン会議の開始"
+ TR_iraklion.12.t: "社会主義問題―発議"
+ TR_iraklion.13.t: "社会主義問題―投票"
+ TR_iraklion.14.t: "社会主義問題―集計"
+ TR_iraklion.15.t: "社会主義問題―結果"
+ TR_iraklion.16.t: "安全保障問題―発議"
+ TR_iraklion.16.t: "安全保障問題―投票"
+ TR_iraklion.17.t: "安全保障問題―集計"
+ TR_iraklion.18.t: "安全保障問題―結果"
+ TR_iraklion.19.t: "諸外国問題―発議"
+ TR_iraklion.20.t: "諸外国問題―投票"
+ TR_iraklion.21.t: "諸外国問題―集計"
+ TR_iraklion.22.t: "諸外国問題―結果"
+ TR_iraklion.23.t: "イラクリオン会議閉幕"
+ TR_iraklion.24.t: "不穏なふいんき←何故か変換できない"
+ TR_iraklion.25.t: "会議は踊る、されど進まず"
+ TR_iraklion.26.t: "融和の代償"
+ TR_iraklion.27.t: "再発する対立"
+ TR_iraklion.28.t: "避けられぬ運命"
 
- 
- 
+
+
