--- a/localisation/TR_cosmetics/japanese/TR_cosmetic_l_japanese.yml
+++ b/localisation/TR_cosmetics/japanese/TR_cosmetic_l_japanese.yml
@@ -1,12 +1,38 @@
 ﻿l_japanese:
  CRO_SLV: "クロアート＝スロヴェーン"
+ CRO_SLV_ADJ: "クロアート＝スロヴェーン"
  CRO_SLV_communism: "クロアート＝スロヴェーン人民共和国"
+ CRO_SLV_communism_DEF: "クロアート＝スロヴェーン人民共和国"
  CRO_SLV_socialism: "クロアート＝スロヴェーン社会主義共和国"
+ CRO_SLV_socialism_DEF: "クロアート＝スロヴェーン社会主義共和国"
  CRO_SLV_socialdemocratic: "クロアート＝スロヴェーン連邦共和国"
+ CRO_SLV_socialdemocratic_DEF: "クロアート＝スロヴェーン連邦共和国"
  CRO_SLV_democratic: "クロアート＝スロヴェーン共和国"
+ CRO_SLV_democratic_DEF: "クロアート＝スロヴェーン共和国"
  CRO_SLV_conservatism: "クロアート＝スロヴェーン"
+ CRO_SLV_conservatism_DEF: "クロアート＝スロヴェーン"
  CRO_SLV_neutrality: "クロアート＝スロヴェーン連合王国"
+ CRO_SLV_neutrality_DEF: "クロアート＝スロヴェーン連合王国"
  CRO_SLV_fascism: "クロアート＝スロヴェーン軍政府"
+ CRO_SLV_fascism_DEF: "クロアート＝スロヴェーン軍政府"
  SOM_UK_subject: "$OVERLORDADJ$保護領ソマリア"
  URSR: "ローマ社会主義共和国連邦"
  PER_puppet_RUS: "ペルシャ保護領"
+ IDC: "インドシナ"
+ IDC_ADJ: "インドシナ"
+ IDC_DEF: "インドシナ"
+ IDC_communism: "インドシナ社会主義連邦共和国"
+ IDC_communism_DEF: "インドシナ社会主義連邦共和国"
+ IDC_socialism: "インドシナ社会主義共和国"
+ IDC_socialism_DEF: "インドシナ社会主義共和国"
+ IDC_socialdemocratic: "インドシナ連邦共和国"
+ IDC_socialdemocratic_DEF: "インドシナ連邦共和国"
+ IDC_democratic: "インドシナ連邦"
+ IDC_democratic_DEF: "インドシナ連邦"
+ IDC_conservatism: "インドシナ国"
+ IDC_conservatism_DEF: "インドシナ国"
+ IDC_neutrality: "インドシナ連合王国"
+ IDC_neutrality_DEF: "インドシナ連合王国"
+ IDC_fascism: "インドシナ帝国"
+ IDC_fascism_DEF: "インドシナ帝国"
+ IDC_subject: "$OVERLORDADJ$領インドシナ連邦"
