アラスカのステートを細分化+資源を追加

--- a/localisation/japanese/victory_points_l_japanese.yml
+++ b/localisation/japanese/victory_points_l_japanese.yml
@@ -443,8 +443,8 @@
  VICTORY_POINTS_12586: "オマハ"
  VICTORY_POINTS_12735: "バーミングハム"
  VICTORY_POINTS_12782: "サンアントニオ"
- VICTORY_POINTS_13090: "ウナラスカ"
- VICTORY_POINTS_13091: "アンカレッジ"
+ VICTORY_POINTS_13090: "アトカ"
+ VICTORY_POINTS_4833: "カディアック"
  VICTORY_POINTS_3778: "オタワ"
  VICTORY_POINTS_3775: "トロント"
  VICTORY_POINTS_1408: "バンクーバー"
@@ -1206,3 +1206,5 @@
  VICTORY_POINTS_6142_SWE: "エナーレ"
  VICTORY_POINTS_12512: "ヌーク"
  VICTORY_POINTS_13003: "トルスハウン"
+ VICTORY_POINTS_13203: "ノヴォアルハンゲリスク"
+ VICTORY_POINTS_7855: "ノヴォウラジーミル"
