--- a/localisation/japanese/state_names_l_japanese.yml
+++ b/localisation/japanese/state_names_l_japanese.yml
@@ -461,7 +461,7 @@
  STATE_460:0 "コンスタンティーヌ"
  STATE_461:0 "カサブランカ"
  STATE_462:0 "マラケシュ"
- STATE_463:0 "アラスカ"
+ STATE_463:0 "シトカ"
  STATE_464:0 "ノバスコシア"
  STATE_465:0 "ニューブランズウィック"
  STATE_466:0 "ノール・デュ・ケベック"
@@ -648,7 +648,7 @@
  STATE_647:0 "パラオ"
  STATE_648:0 "南鳥島"
  STATE_649:0 "ガラパゴス諸島"
- STATE_650:0 "アッツ島"
+ STATE_650:1 "聖テオドロス島"
  STATE_651:0 "ウファ"
  STATE_652:0 "オレンブルク"
  STATE_653:0 "エカテリンブルク"
@@ -935,7 +935,7 @@
  STATE_933:0 "シェットランド諸島"
  STATE_934:0 "シュコーデル"
  STATE_935:1 "マラムレシュ"
- STATE_936:1 ""
+ STATE_936:1 "ダンケルク"
  STATE_937:1 "カレー"
  STATE_938:1 "ティラスポリ"
  STATE_939:1 "グラッツ"
@@ -945,3 +945,6 @@
  STATE_943:0 "テキルダー"
  STATE_944:0 "アダナ港"
  STATE_945:0 "ペトリキ"
+ STATE_946:0 "カディアック"
+ STATE_947:0 "アトカ"
+ STATE_948:0 "ミハイロフ"
