--- a/localisation/TR_focus/japanese/TR_GER_focus_l_japanese.yml
+++ b/localisation/TR_focus/japanese/TR_GER_focus_l_japanese.yml
@@ -9,12 +9,10 @@
  GER_socialist_economy:0 "経済政策の見直し"
  socialist_economy2:0 "市場経済を取り入れる"
  GER_condemn_revisionists:0 "修正主義者を批判"
- GER_promote_heavy_industrialization:0 "重工業化を促進"
  GER_workers_government:0 "労働者政府"
  GER_new_socialism_economy:0 "新しい社会主義経済"
  GER_social_fascism:0 "社会ファシズム論"
  GER_unite_SPD:0 "社共合同"
- GER_unifying_opinions:0 "意見を統一"
  GER_totalitarianism:0 "全体主義論"
  GER_pandering_to_the_left:0 "左派との迎合"
  GER_positive_propaganda:0 "積極的なプロパガンダ"
@@ -22,16 +20,15 @@
  GER_organize_secret_police_force:0 "秘密警察を組織"
  GER_purge_dissidents:0 "反体制派を粛清"
  GER_distance_from_international:0 "距離を置く"
- GER_pangermanic_socialism:0 "汎ゲルマン社会主義"
  GER_international_revolution:0 "プロレタリア国際主義"
  GER_reclaiming_territories:0 "旧領土の再請求"
  GER_recapture_of_schleswig:0 "シュレースヴィヒ奪還"
  GER_westward_expansion:0 "西方への拡大"
  GER_crush_the_british_imperialists:0 "イギリスとの決戦"
  GER_protecting_czech_communists:0 "チェコの共産主義者を保護"
- GER_supporting_poland:0 "ポーランドの独立運動を支援"
+ GER_supporting_poland:0 "ポーランドの独立を支援"
  GER_warsaw_uprising:0 "ワルシャワ蜂起"
- GER_Criticizes_Italian_totalitarianism:0 "イタリア全体主義への攻撃"
+ GER_Criticizes_Italian_totalitarianism:0 "イタリアへの攻撃"
  GER_supporting_great_britain:0 "イギリスの革命勢力を支援"
  GER_war_against_the_fascists:0 "ファシストとの戦争"
  GER_declaration_of_war_on_america:0 "海を越えて"
@@ -45,11 +42,22 @@
  GER_swiss_partition:0 "スイス分割"
  GER_assist_small_medium_enterprises:0 "中小企業への援助"
  GER_agricultural_collectivization:0 "農業集団化"
- :0 ""
  GER_rail_network_expansion:0 "鉄道網の拡大"
  GER_focus_on_industry:0 "産業への注力"
  GER_first_five_year_plan:0 "第一次五ヵ年計画"
  GER_second_five_year_plan:0 "第二次五ヵ年計画"
  GER_one_country_socialism:0 "一国社会主義"
- GER_reclaiming_north_schleswig_desc:0 "GER_reclaiming_north_schleswig_desc"
  GER_reclaiming_north_schleswig:0 "北シュレースヴィヒ奪還"
+ GER_thought_education:0 "思想教育の徹底"
+ GER_attack_france:0 "西方への遠征"
+ GER_attack_italy:0 "ローマ帝国の野望を砕く"
+ GER_support_finland:0 "フィンランドの独立を支援"
+ newfocus_95:0 "バルト海での安全保障問題"
+ GER_friendship_with_denmark:0 "デンマークとの友好"
+ GER_reconquest_african_colonies:0 "退路を断つ"
+ GER_war_economy:0 "戦争経済"
+ GER_road_construction:0 "道路を建設"
+ GER_attack_switherland:0 "南からの迂回"
+ GER_hungary_revolution:0 "ハンガリー革命を再び"
+ GER_south_tyrol:0 "南チロル再請求"
+ GER_state_function:0 "国家事業の拡大"
