--- a/localisation/TR_focus/japanese/TR_RUS_focus_l_japanese.yml
+++ b/localisation/TR_focus/japanese/TR_RUS_focus_l_japanese.yml
@@ -47,7 +47,7 @@
  RUS_infrastructure:"道路舗装事業"
  RUS_infrastructure_desc:"我が国の多くの場所はコンクリートで舗装されていない古い道路であり、大きな車両は通行できない。産業効率化の為に、我々はこれを克服しなければならない。"
  RUS_infrastructure_1:"帝立発電所の建設"
- RUS_infrastructure_desc:"帝国の電気事情は劣悪だ。今もほとんどの世帯では蝋燭を使って夜を過ごしている。偉大なるツァーリは大規模な発電事業を自ら投資して行うと述べ、膨大な資金で電気の届かない地域に対し大規模な発電設備を建設した。"
+ RUS_infrastructure_1_desc:"帝国の電気事情は劣悪だ。今もほとんどの世帯では蝋燭を使って夜を過ごしている。偉大なるツァーリは大規模な発電事業を自ら投資して行うと述べ、膨大な資金で電気の届かない地域に対し大規模な発電設備を建設した。"
  RUS_agricultural_tructer:"自動農具の公共化"
  RUS_agricultural_tructer_desc:"発達した自動農具を各地に存在する自治体に配給し、それを共同で使う自動農具法を帝国政府が可決した。農業の近代化は国の近代化であり、農具の生産の為に必要な工場をより多く建設せねばならない。"
  RUS_tech_school:"帝国技術学院"
@@ -70,3 +70,8 @@
  RUS_remake_MGI_desc:"国家資産省は我が国の産業改革によってもはやほとんど機能していない。内部で極秘に研究されていた技術と共に全てを公開し、新たな組織へ作り変えるようツァーリは指示した。"
  RUS_remake_industrial_system:"ロシア経済圏"
  RUS_remake_industrial_system_desc:"帝国政府の懸命な努力と、開発に協力した多くの労働者、そして改革の先導者たるツァーリの努力によって、ロシア国内の経済状況は非常に近代的なものへと変化した。ペトログラードの市内ではビジネスマンたちがニューヨークのように行き交い、木造の家で蠟燭を頼りに本を読んでいた貧しい子供はモスクワの技術学校で学んでいる。我々の経済の近代化は途上であるが、あと少しの努力で完全な近代経済国家となり、世界最高水準の生産力を得るだろう。"
+
+ RUS_research_of_tanks: "機甲開発局の創設"
+ RUS_research_of_tanks_desc: "国内にいる戦車開発論者は、我が国の大戦争時代の戦車部隊を更に強化するのが近代化のために必要だと考えている。今まで無視されてきたこのような声によって、帝国陸軍を更に躍進させる時が来た。"
+ RUS_research_of_middle_tanks: "帝国の中戦車"
+ RUS_research_of_middle_tanks_desc: "我が国の戦車技術は他国より大きく遅れている。軽戦車や重量級の戦車を開発するよりも、速度と火力を両立できるロシアの凍土を駆け抜ける中戦車の開発を行おう。"
