--- a/localisation/TR_tooltips/japanese/tooltips_l_japanese.yml
+++ b/localisation/TR_tooltips/japanese/tooltips_l_japanese.yml
@@ -12,6 +12,8 @@
   TR_Russia.tt.11: "§Rこの国家方針を選択することで、イラン北部に請求権を得るが、イギリスの反発による軍隊の一時的な弱体化を発生させる！§!"
   TR_Russia.tt.12: "§R産業改革に追い付かなかった組織を解体するが、同時に組織が行っていた次の戦争への備えも失う！§!"
   TR_Russia.tt.13: "§3近代化§!によって国内産業の構造が改善しつつある！"
+  TR_Russia.tt.14: "§Yモスクワ§!に完全な状態でよく訓練された装甲師団§Y10§!師団からなる親衛装甲軍団が組織される！"
+  TR_Russia.tt.15: "§Yペトログラード§!に完全な状態でよく訓練された装甲師団§Y12§!師団からなる親衛装甲軍団が組織される！"
 
   TR_nosupport: "§Rこの選択肢は現バージョンでは実装されていない！§!"
   RULE_ALLOW_RELEASE_NATIONS_RUSSIA_POLAND_TOOLTIP: "§Y[ROOT.GetNameDefCap]§!は§Y[POL.GetNameDef]§!の解放ができません。"
