--- a/localisation/TR_focus/japanese/TR_RUS_focus_l_japanese.yml
+++ b/localisation/TR_focus/japanese/TR_RUS_focus_l_japanese.yml
@@ -75,3 +75,5 @@
  RUS_research_of_tanks_desc: "国内にいる戦車開発論者は、我が国の大戦争時代の戦車部隊を更に強化するのが近代化のために必要だと考えている。今まで無視されてきたこのような声によって、帝国陸軍を更に躍進させる時が来た。"
  RUS_research_of_middle_tanks: "帝国の中戦車"
  RUS_research_of_middle_tanks_desc: "我が国の戦車技術は他国より大きく遅れている。軽戦車や重量級の戦車を開発するよりも、速度と火力を両立できるロシアの凍土を駆け抜ける中戦車の開発を行おう。"
+ RUS_Tank_divisions: "親衛装甲軍団"
+ RUS_Tank_divisions_desc: "我が国の複数の軍需産業を動員し、大量の中戦車の試験量産に成功した。これらで得た大量の戦車によってよく訓練された複数の装甲軍団を作成することで、高度な技術を持つ脅威にも対等に立ち向かうことができる。"
