--- a/localisation/TR_focus/japanese/TR_SRI_focus_l_japanese.yml
+++ b/localisation/TR_focus/japanese/TR_SRI_focus_l_japanese.yml
@@ -39,8 +39,45 @@
  SRI_assault_on_communists: "共産主義への襲撃"
  SRI_strengthening_blackshirts: "黒シャツ隊を強化"
  SRI_smash_PSI: "社会党の粉砕"
-
-
+ SRI_reunification: "再結束"
+ SRI_revival: "国家再生"
+ SRI_industrialisation_south: "南部の工業化"
+ SRI_large-scale_steel_mill: "大規模製鉄所の建設"
+ SRI_additional_research_slot: "追加の研究枠"
+ SRI_agrarian_reform_south: "南部での農業改革"
+ SRI_five_year_plan: "五か年計画"
+ SRI_large-scale_developments_south: "南部の大規模開発"
+ SRI_vast_road_network: "大規模交通網"
+ SRI_continenta_army: "強固な軍隊"
+ SRI_large-scale_developments_north: "北部の大規模開発"
+ SRI_cooperation_for_spain: "スペインへの協力"
+ SRI_neutrality_no_sense: "中立はもはや意味をなさない"
+ SRI_perfect_italy: "完全なイタリア"
+ SRI_red_Adria: "赤きアドリア"
+ SRI_focus_relation_europe: "ヨーロッパとの関係性を重視"
+ SRI_red_greece: "ギリシャの社会主義化"
+ SRI_red_Balkans: "バルカンの社会主義化"
+ SRI_african_charenge: "アフリカへの挑戦"
+ SRI_mediterranean_sea: "地中海条約"
+ SRI_friendship_with_turkey: "トルコとの友好"
+ SRI_friendship_with_egypt: "エジプトとの友好"
+ SRI_red_africa: "赤きアフリカ"
+ SRI_URSR: "労働者よ、ローマのもとに集え"
+ SRI_conquering_serbia: "セルビア征服"
+ SRI_greek_conquest: "ギリシャ征服"
+ SRI_africa_reconquwst: "アフリカ再征服"
+ SRI_our_sea: "我らが海"
+ SRI_strengthening_power_duce: "ドゥーチェの権力を強化"
+ SRI_augusutus: "尊厳たるもの"
+ SRI_return_to_hispania: "ヒスパニアへの帰還"
+ SRI_return_to_gaul: "ガリアへの帰還"
+ SRI_return_to_britannia: "ブリタニアへの帰還"
+ SRI_return_to_asia: "アジアへの帰還"
+ SRI_omnes_viae_Romam_ducunt: "すべての道はローマに通ず"
+ SRI_cooperation_for_great_war: "大戦への協力"
+ SRI_attack_to_russia: "ロシアへの攻撃"
+ SRI_cooperation_for_greek: "ギリシャへの協力"
+ SRI_attack_to_britain: "帝国主義を破壊せよ"
 
 
 
