軍事近代化NF

--- a/localisation/TR_focus/japanese/TR_RUS_focus_l_japanese.yml
+++ b/localisation/TR_focus/japanese/TR_RUS_focus_l_japanese.yml
@@ -77,3 +77,21 @@
  RUS_research_of_middle_tanks_desc: "我が国の戦車技術は他国より大きく遅れている。軽戦車や重量級の戦車を開発するよりも、速度と火力を両立できるロシアの凍土を駆け抜ける中戦車の開発を行おう。"
  RUS_Tank_divisions: "親衛装甲軍団"
  RUS_Tank_divisions_desc: "我が国の複数の軍需産業を動員し、大量の中戦車の試験量産に成功した。これらで得た大量の戦車によってよく訓練された複数の装甲軍団を作成することで、高度な技術を持つ脅威にも対等に立ち向かうことができる。"
+ RUS_mass_product_guns:"歩兵銃の効率生産"
+ RUS_mass_product_guns_desc:"我が国の大量の人的資源に対して、武器生産能力が低すぎることが統計で判明した。大いなるロシアの名に恥じぬ大規模な銃生産システムを構築し、各地の工場から直接軍施設へ運送されるようにする。"
+ RUS_doniepl_fort:"ドニエプル川要塞群"
+ RUS_doniepl_fort_desc:"我が国にはドニエプル川という巨大な河川が存在する。我々の軍隊が万一にも前線での戦闘に失敗し、後退する必要があるときは、用意された強固な防衛設備を使用すべきだろう。"
+ RUS_dowina_fort:"西ドヴィナ川要塞群"
+ RUS_dowina_fort_desc:"建設されたドニエプル要塞は防衛的効果が高い。これに続いて、バルト海まで要塞線を延長することで、我が国の首都など誰も踏むことはできなくなる。"
+ RUS_build_air_factory:"廃工場の転換"
+ RUS_build_air_factory_desc:"地方にある使われなくなった工場を帝国陸軍が購入し、空軍生産のための工場として割り当てる。これによって不必要な産業建築物が減少し、国内の産業、軍需体制がさらに進展する。"
+ RUS_russian_planes:"極地の航空機"
+ RUS_russian_planes_desc:"我が国の国境線は他国と比較すると非常に長く、面積も広い。各地に密集した航空施設を建設することは非現実的であるため、航続距離の長い戦闘機を開発するべきだ。"
+ RUS_make_a_ship:"帝国海軍建設計画"
+ RUS_make_a_ship_desc:"帝国海軍は貧弱だ。かつての大戦争の後の海軍技術の進展は我が国を置き去りにして進行し、我が国に残るのは旧式艦艇の寄せ集めだ。近代化とともに我々も大規模な海軍建設に踏み出すべきだろう。"
+ RUS_empire_navy:"沿岸海軍綱領"
+ RUS_empire_navy_desc:"海軍理論家たちのツァーリに対する意見書には、沿岸海軍の効率性と我が国における重要性が書かれていた。我が国の途上な近代化においては、大規模な外洋艦隊の編成は不可能であるが、小規模な沿岸防衛なら十分な戦力を提供できるだろう。"
+ RUS_best_light_ship:"最高の駆逐艦"
+ RUS_best_light_ship_desc:"ロシア帝国の技術の結晶とも言えるこの最新式の駆逐艦は、局地的な戦闘と近海での監視活動へ特化させた船体である。この先進的な駆逐艦によって、我が国への上陸はさらに困難になるだろう。"
+ RUS_Tukhachevskii:"軍事近代化顧問の招聘"
+ RUS_Tukhachevskii_desc:"新たな戦術を生み出そうとしているミハイル・トゥハチェフスキーを、ツァーリは適切な役職の付与で対応せよと勅命を下した。彼の新たな戦術には戦車を利用した攻撃や、深く突き刺すような攻勢方針などが存在するが、それらの有用性の検証にはより大規模な演習が必要だろう。"
