--- a/localisation/TR_tooltips/japanese/tooltips_l_japanese.yml
+++ b/localisation/TR_tooltips/japanese/tooltips_l_japanese.yml
@@ -14,6 +14,8 @@
   TR_Russia.tt.13: "§3近代化§!によって国内産業の構造が改善しつつある！"
   TR_Russia.tt.14: "§Yモスクワ§!に完全な状態でよく訓練された装甲師団§Y10§!師団からなる親衛装甲軍団が組織される！"
   TR_Russia.tt.15: "§Yペトログラード§!に完全な状態でよく訓練された装甲師団§Y12§!師団からなる親衛装甲軍団が組織される！"
+  TR_Russia.tt.16: "§Yドニエプル川§!に沿って§Yレベル4§!の§Y陸上要塞§!を建設する。"
+  TR_Russia.tt.17: "§Y西ドヴィナ川§!に沿って§Yレベル4§!の§Y陸上要塞§!を建設する。\n平野部に§Yレベル5§!の§Y陸上要塞§!を建設する。"
 
   TR_nosupport: "§Rこの選択肢は現バージョンでは実装されていない！§!"
   RULE_ALLOW_RELEASE_NATIONS_RUSSIA_POLAND_TOOLTIP: "§Y[ROOT.GetNameDefCap]§!は§Y[POL.GetNameDef]§!の解放ができません。"
