メインルート

--- a/localisation/TR_focus/japanese/TR_RUS_focus_l_japanese.yml
+++ b/localisation/TR_focus/japanese/TR_RUS_focus_l_japanese.yml
@@ -95,3 +95,15 @@
  RUS_best_light_ship_desc:"ロシア帝国の技術の結晶とも言えるこの最新式の駆逐艦は、局地的な戦闘と近海での監視活動へ特化させた船体である。この先進的な駆逐艦によって、我が国への上陸はさらに困難になるだろう。"
  RUS_Tukhachevskii:"軍事近代化顧問の招聘"
  RUS_Tukhachevskii_desc:"新たな戦術を生み出そうとしているミハイル・トゥハチェフスキーを、ツァーリは適切な役職の付与で対応せよと勅命を下した。彼の新たな戦術には戦車を利用した攻撃や、深く突き刺すような攻勢方針などが存在するが、それらの有用性の検証にはより大規模な演習が必要だろう。"
+ RUS_russian_imperiya_army:"ロシア帝国軍"
+ RUS_russian_imperiya_army_desc:"ロシア帝国の軍隊は、近代化によって世界で最も強く、巨大な軍隊となった。我々の凍てつく大地に踏み入った過去の侵略者たちのように、これから我々に対して挑戦する者たちも、同じように倒れてゆくのだろう。"
+ RUS_tsar_radio:"宮廷電波放送"
+ RUS_tsar_radio_desc:"ツァーリ・キリルは大胆な親政を行うため、全ての国民に語り掛ける必要があると言った。全国に繋がる大規模なラジオ網によって、どの家庭も等しく皇帝の声を聴くことができるように様々なインフラが整備されるだろう。"
+
+ RUS_with_serbia:"セルビアへの支援"
+ RUS_with_serbia_desc:"セルビアはスラヴ主義における同胞であり、長らく我々が独立を支援してきた。今こそ彼らに惜しまない支援を送り、共産主義者と対抗するための姿勢を確固たるものにすべきだ。"
+ RUS_with_romania:"ルーマニアへの支援"
+ RUS_with_romania_desc:"ルーマニアは欧州有数の産油国であり、大規模な軍隊を保有している。ルーマニアの独立が脅かされれば、バルカンの秩序は崩壊し、我々の秩序にも穴が開くだろう。先に布石を打つことで共産主義者の入る隙を消してしまおう。"]
+
+ RUS_alaska_search:"アラスカ調査隊"
+ RUS_alaska_search_desc:"百年前より受け継がれる我々の宝箱であるアラスカを、もう一度先端技術を使用して測量・調査することでさらなる資源を発見できる可能性があると科学者たちは指摘している。シベリアのように大規模な調査隊を派遣して、国益の拡大を図ってもよい時期だろう。"
