ドイツ政治ツリー右完成 13/100

--- a/localisation/TR_focus/japanese/TR_GER_focus_l_japanese.yml
+++ b/localisation/TR_focus/japanese/TR_GER_focus_l_japanese.yml
@@ -35,7 +35,7 @@
  GER_proletariat_dictatorship:0 "プロレタリアート独裁"
  GER_facilitate_nationalization:0 "国有化の促進"
  GER_workers_democracy:0 "労働者の民主主義"
- GER_administrative_reform:0 "行政改革"
+ GER_leadership_reform:0 "指導部の改革"
  GER_preparing_for_battle:0 "戦いに備える"
  GER_swiss_partition:0 "スイス分割"
  GER_assist_small_medium_enterprises:0 "中小企業への援助"
