--- a/localisation/TR_ideas/japanese/TR_GER_ideas_l_japanese.yml
+++ b/localisation/TR_ideas/japanese/TR_GER_ideas_l_japanese.yml
@@ -5,3 +5,5 @@
  GER_left_right_divide2: "左右の分裂"
  GER_totalitarian_oppression: "全体主義者の弾圧"
  GER_workers_democracy: "労働者の民主主義"
+ GER_workers_democracy2: "労働者の民主主義"
+ GER_positive_propaganda: "積極的なプロパガンダ"
