--- a/localisation/TR_events/japanese/TR_super_events_l_japanese.yml
+++ b/localisation/TR_events/japanese/TR_super_events_l_japanese.yml
@@ -2,3 +2,6 @@
  SE_Error_Title: "エラーメッセージ"
  SE_Error_Desc: "これはエラーメッセージです。\n意図して起こしたものでなければ、\nTsareich開発チームに報告してください\n\n―Tsareich開発チーム" 
  SE_Error_Button: "エラーメッセージ"
+ SE_one_Italy_Title: "イタリア再統一"
+ SE_one_Italy_Desc: "我々が何処に退こうとも、                           \n戦う限りローマは存続する                \n\n―ジュゼッペ・ガリバルディ"
+ SE_one_Italy_Button: "イタリアよ、一つにあれ"
