チェコ革命

--- a/localisation/japanese/countries_l_japanese.yml
+++ b/localisation/japanese/countries_l_japanese.yml
@@ -253,8 +253,8 @@
  CZE_democratic_DEF: "チェコ共和国"
  CZE_neutrality: "ボヘミア王国"
  CZE_neutrality_DEF: "ボヘミア王国"
- CZE_communism: "チェコ人民共和国"
- CZE_communism_DEF: "チェコ人民共和国"
+ CZE_communism: "チェコ社会主義共和国"
+ CZE_communism_DEF: "チェコ社会主義共和国"
  CZE_fascism_ADJ: "チェコ"
  CZE_democratic_ADJ: "チェコ"
  CZE_neutrality_ADJ: "チェコ"
@@ -264,6 +264,8 @@
  CZE_ADJ: "チェコ"
  CZE_subject: "$OVERLORDADJ$ $CZE$"
  CZE_subject_DEF: "$OVERLORDADJ$ $CZE$"
+ CZE_GER_communism_subject: "チェコ社会主義共和国"
+ CZE_GER_communism_subject_DEF: "チェコ社会主義共和国"
  POL_fascism: "ファランガ・ポーランド"
  POL_fascism_DEF: "ファランガ・ポーランド"
  POL_democratic: "ポーランド共和国"
