チェコがドイツの属国になった時の国名変更

--- a/localisation/japanese/countries_l_japanese.yml
+++ b/localisation/japanese/countries_l_japanese.yml
@@ -264,8 +264,8 @@
  CZE_ADJ: "チェコ"
  CZE_subject: "$OVERLORDADJ$ $CZE$"
  CZE_subject_DEF: "$OVERLORDADJ$ $CZE$"
- CZE_GER_communism_subject: "チェコ社会主義共和国"
- CZE_GER_communism_subject_DEF: "チェコ社会主義共和国"
+ CZE_GER_communism_subject: "チェコ自治社会主義共和国"
+ CZE_GER_communism_subject_DEF: "チェコ自治社会主義共和国"
  POL_fascism: "ファランガ・ポーランド"
  POL_fascism_DEF: "ファランガ・ポーランド"
  POL_democratic: "ポーランド共和国"
