--- a/localisation/TR_focus/japanese/TR_SRI_focus_l_japanese.yml
+++ b/localisation/TR_focus/japanese/TR_SRI_focus_l_japanese.yml
@@ -1,5 +1,6 @@
 ﻿l_japanese:
  SRI_emergency_council: "緊急評議会の設立"
+ SRI_emergency_council_desc: "緊急評議会の設立"
  SRI_just_socialim: "正統派社会主義"
  SRI_north-south_problem: "南北問題"
  SRI_north-south_problem.tt: "イベント§Y$SRI_north-south_problem$§!が発生する"
