ニュースイベント追加と布告システム

--- a/localisation/TR_events/japanese/TR_RUS_events_l_japanese.yml
+++ b/localisation/TR_events/japanese/TR_RUS_events_l_japanese.yml
@@ -18,7 +18,19 @@
  TR_Russia.6.a: "イラン北部を「解放」しよう。"
 
  TR_Russia_news.1.t: "ロシア皇帝の暗殺"
- TR_Russia_news.1.d: "一月中頃、ロシアの冬将軍はすでに大地を覆い、吹雪の中モスクワに到着した皇帝アレクセイを一発の銃弾が襲った。長らく政府によって抑圧されてきたボリシェヴィキは、入念なテロルの計画を実行に移した。皇帝アレクセイの持病、血友病の影響もあり、その日のうちに皇帝は急いで送り込まれた病院で医師の治療もやむなく息を引き取った。ペトログラードはこの知らせに動揺している。不幸中の幸いは、帝室一同が集まっていた宮殿に仕掛けられた爆弾が近衛兵により間一髪で解除されたことであろう。ただ、もはやロシア帝国にかつての秩序は存在せず、あるのは反動的な宮廷とそれに反抗的な一部の政府、そして陰で暗躍する共産主義者だけだ。"
+ TR_Russia_news.1.d: "一月中頃、ロシアの冬将軍はすでに大地を覆い、吹雪の中モスクワに到着した皇帝アレクセイを一発の銃弾が襲った。長らく政府によって抑圧されてきたボリシェヴィキは、入念なテロルの計画を実行に移した。皇帝アレクセイの持病、血友病の影響もあり、その日のうちに皇帝は急いで送り込まれた病院で医師の治療もやむなく息を引き取った。ペトログラードはこの知らせに動揺している。\n不幸中の幸いは、帝室一同が集まっていた宮殿に仕掛けられた爆弾が近衛兵により間一髪で解除されたことであろう。ただ、もはやロシア帝国にかつての秩序は存在せず、あるのは反動的な宮廷とそれに反抗的な一部の政府、そして陰で暗躍する共産主義者だけだ。"
  TR_Russia_news.1.a: "なんということだ"
  TR_Russia_news.1.b: "労働者による制裁だ"
  TR_Russia_news.1.c: "帝国の大きな損失だ"
+
+ TR_Russia_news.2.t: "ロシア新政府の樹立"
+ TR_Russia_news.2.d: "ロシア帝国では、新たなツァーリの即位から数か月が経過した。宮廷内の恐怖入り混じる権力争いを流血なしに勝利したツァーリは、元政治犯も含めた複数人の腹心たちに新たな帝国政府の組閣を命令した。反動的思想にとらわれた旧政府はなすすべもなく解体され、ツァーリの圧力によって政府が消滅したという事実は国内の反動思想を持つ者たちに懸念を与えた。\nどちらにせよ、ロシア帝国でかつてない改革の風が、反動的なはずのツァーリから吹き始めていることは言うまでもなく、オスマン帝国の二の足を踏むような事態はなくなっただろうと政治学者たちは語っている。"
+ TR_Russia_news.2.a: "改革こそ力である！"
+ TR_Russia_news.2.b: "そうか。"
+
+ TR_Russia_news.3.t: "テヘラン条約"
+ TR_Russia_news.3.d: "この頃続いていたイランとロシアにおけるカスピ海南部を巡った戦争は、ロシアに有利な結果で終着点を迎えたといえよう。テヘランにロシア帝国全権代表が訪れ、イラン側代表と70時間にも及ぶ会議の末に両者は平和に関する条約を締結した。\n内容は大幅にロシアが利益を得るもので、ロシアはカスピ海南部とテヘラン以北のイラン領土を民政下に置くことになり、「内政不安」を理由にペルシャ保護領として残りの地域はロシアに保護される。\nこのような結果は国際社会における独立国の立場を損なうあってはならない事態だとイギリス外務省はロシア帝国に非難声明を送付したと説明したが、ロシア帝国側はこれを黙殺している。"
+ TR_Russia_news.3.a: "グレートゲームは終わりか？"
+ TR_Russia_news.3.b: "我々は陰で泣いている。"
+ TR_Russia_news.3.c: "奴らは見失ってしまったのだ！"
+ TR_Russia_news.3.d: "注視すべきだ。"
