じゅーこふくん

--- a/localisation/TR_characters/japanese/TR_characters_l_japanese.yml
+++ b/localisation/TR_characters/japanese/TR_characters_l_japanese.yml
@@ -7,3 +7,6 @@
  SRI_dAnnunzio: "ガブリエーレ・ダンヌンツィオ"
  SRI_consiglio_socialista: "臨時社会主義評議会"
  SRI_blank_leader: "指導者不在"
+
+
+ RUS_georgy_zhukov: "ゲオルギー・ジューコフ"
